{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 86,
  "lineage": "3684e485-903d-0100-7665-524c0557ae7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0059748a002dc1805",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-145-80.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.145.80",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0604d4a8624dc4b38",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-121-58.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.121.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:internet-gateway/igw-0930d77c78a9e9f73",
            "id": "igw-0930d77c78a9e9f73",
            "owner_id": "367921556108",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0059748a002dc1805",
            "id": "nat-0042ad13f8726aef3",
            "network_interface_id": "eni-065ae4daf47e063f7",
            "private_ip": "10.0.1.173",
            "public_ip": "3.36.145.80",
            "subnet_id": "subnet-0e9b5619601e62306",
            "tags": {
              "Name": "NAT-GW-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_subnet.first_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0604d4a8624dc4b38",
            "id": "nat-0e510e3fa798e5741",
            "network_interface_id": "eni-0374b1e1b9e45d478",
            "private_ip": "10.0.2.223",
            "public_ip": "15.165.121.58",
            "subnet_id": "subnet-0e27bf59d2b14c48c",
            "tags": {
              "Name": "NAT-GW-2"
            }
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_subnet.second_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05071b4700b33fc6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0042ad13f8726aef3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05071b4700b33fc6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_1",
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.route_table_private_1",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e266fd9bec27c371080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e510e3fa798e5741",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e266fd9bec27c37",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_2",
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.route_table_private_2",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0276fb70312359b93",
            "owner_id": "367921556108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05071b4700b33fc6f",
            "owner_id": "367921556108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05e266fd9bec27c37",
            "owner_id": "367921556108",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad151fea386c01dd",
            "route_table_id": "rtb-0276fb70312359b93",
            "subnet_id": "subnet-0e9b5619601e62306"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.first_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a062e9c8fe5aab4",
            "route_table_id": "rtb-0276fb70312359b93",
            "subnet_id": "subnet-0e27bf59d2b14c48c"
          },
          "dependencies": [
            "aws_route_table.route_table",
            "aws_subnet.second_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf64effc0335f8b",
            "route_table_id": "rtb-05071b4700b33fc6f",
            "subnet_id": "subnet-08e739c4053d0dfb1"
          },
          "dependencies": [
            "aws_route_table.route_table_private_1",
            "aws_subnet.first_private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa828d01b2ae554a",
            "route_table_id": "rtb-05e266fd9bec27c37",
            "subnet_id": "subnet-0a368f825b819a4e5"
          },
          "dependencies": [
            "aws_route_table.route_table_private_2",
            "aws_subnet.second_private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-08e739c4053d0dfb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-08e739c4053d0dfb1",
            "map_public_ip_on_launch": false,
            "owner_id": "367921556108",
            "tags": {
              "Name": "koozzi-private-01"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-0e9b5619601e62306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e9b5619601e62306",
            "map_public_ip_on_launch": false,
            "owner_id": "367921556108",
            "tags": {
              "Name": "koozzi-subnet-1"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-0a368f825b819a4e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a368f825b819a4e5",
            "map_public_ip_on_launch": false,
            "owner_id": "367921556108",
            "tags": {
              "Name": "koozzi-private-02"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-0e27bf59d2b14c48c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e27bf59d2b14c48c",
            "map_public_ip_on_launch": false,
            "owner_id": "367921556108",
            "tags": {
              "Name": "koozzi-subnet-2"
            },
            "vpc_id": "vpc-09e2be6ae711dc135"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:vpc/vpc-09e2be6ae711dc135",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005fa6553918ff67f",
            "default_route_table_id": "rtb-08ce8309fab4cba23",
            "default_security_group_id": "sg-0632cf45f0eb46919",
            "dhcp_options_id": "dopt-0a79f061",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e2be6ae711dc135",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ce8309fab4cba23",
            "owner_id": "367921556108",
            "tags": {
              "Name": "koozzi-vpc"
            }
          }
        }
      ]
    }
  ]
}